--- a/index.html
+++ b/index.html
@@ -762,6 +762,7 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
@@ -905,16 +906,15 @@
             data:$("#submit-form").serialize(),
             method:"post",
             success:function (response){
-                alert("Form submitted successfully")
-                window.location.reload()
+              swal("Hello world!");
+//                 window.location.reload()
             },
             error:function (err){
-                alert("Something Error")
-
+              swal("Hello world!");
             }
         })
       }else{
-        alert("incurret info")
+      swal("Hello world!");
         
       }
     })
